# gami

./: .env.example  .gitignore  Dockerfile  LICENSE  MIGRATION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
api/: config.py  main.py
cli/: cold_archive_cron.py  cold_cmd.py  gami_journal.py  ingest_all.py  ingest_cmd.py  journal_cron.py  journal_hook.sh  process_segments.sh
daemon/: __init__.py  __main__.py  context_injector.py  predictive_retriever.py  state_classifier.py  subconscious.py
data/: eval_fast_results.jsonl  eval_fast_summary.json
infra/: backup.sh  grafana-dashboard.json
install/: GAMI-CLAUDE.md  SETUP.md  install.sh  schema.sql
manifold/: README.md  ROADMAP.md  __init__.py  cli.py  config.py  config_loader.py  config_v2.py  embedding.py  exceptions.py  metrics.py  repository.py  tasks.py  validation.py
mcp_tools/: server.py  tool_definitions.py
parsers/: __init__.py  base.py  chunker.py  conversation_parser.py  markdown_parser.py  pdf_parser.py  plaintext_parser.py  sqlite_memory_parser.py  topic_detector.py
prompts/: claim_extraction.j2  entity_extraction.j2  event_extraction.j2  relation_extraction.j2  summarization.j2
scripts/: backfill_manifold_embeddings.py  bulk_ingest.py  chunk_and_embed.py  cleanup_sessions.py  describe_images.py  download_scrape_images.py  dream_cycle.py  embed_all.py  embed_batch.py  embed_cleanup.py  embed_cleanup2.py  embed_cpu_parallel.py  embed_fast.py  embed_final.py  embed_final_v2.py  embed_gpu.py  embed_gpu_copy.py  embed_gpu_fast.py  embed_remaining.py  (+32 more)
(+134 files in other folders)
