[project]
name = "gami"
version = "0.1.0"
description = "Graph-Augmented Memory Interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "tiktoken>=0.5.0",
    "python-multipart>=0.0.6",
    "zstandard>=0.22.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.0",
]

[project.scripts]
gami = "cli.gami_cli:main"
gami-journal = "cli.gami_journal:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
